{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 39,
  "lineage": "ee3381d5-1d0d-ef42-83c4-f35bf7524ed4",
  "resources": [
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f13a5385feccc047",
            "association_id": "eipassoc-033f2b3d209165132",
            "domain": "vpc",
            "id": "eipalloc-0f13a5385feccc047",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04832e322b89df642",
            "private_dns": "ip-10-0-11-156.ec2.internal",
            "private_ip": "10.0.11.156",
            "public_dns": "ec2-3-235-216-113.compute-1.amazonaws.com",
            "public_ip": "3.235.216.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.subnet-module.aws_internet_gateway.igw",
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:internet-gateway/igw-023cdf329f72ac05c",
            "id": "igw-023cdf329f72ac05c",
            "owner_id": "537064189997",
            "tags": {
              "Name": "myVPC-igw"
            },
            "tags_all": {
              "Name": "myVPC-igw"
            },
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f13a5385feccc047",
            "connectivity_type": "public",
            "id": "nat-0794564420bbb11d4",
            "network_interface_id": "eni-04832e322b89df642",
            "private_ip": "10.0.11.156",
            "public_ip": "3.235.216.113",
            "subnet_id": "subnet-0f4327ea03f94077f",
            "tags": {
              "Name": "myVPC-nat"
            },
            "tags_all": {
              "Name": "myVPC-nat"
            }
          },
          "dependencies": [
            "module.subnet-module.aws_eip.nat_eip",
            "module.subnet-module.aws_internet_gateway.igw",
            "module.subnet-module.aws_subnet.public_subnet",
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ba379cbf65f1584a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0794564420bbb11d4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba379cbf65f1584a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet-module.aws_eip.nat_eip",
            "module.subnet-module.aws_internet_gateway.igw",
            "module.subnet-module.aws_nat_gateway.nat",
            "module.subnet-module.aws_route_table.private",
            "module.subnet-module.aws_subnet.public_subnet",
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-023cdf329f72ac05c",
            "id": "r-rtb-0fcd99237744cc3561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fcd99237744cc356",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet-module.aws_internet_gateway.igw",
            "module.subnet-module.aws_route_table.public",
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:route-table/rtb-0ba379cbf65f1584a",
            "id": "rtb-0ba379cbf65f1584a",
            "owner_id": "537064189997",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0794564420bbb11d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myVPC-private-route-table"
            },
            "tags_all": {
              "Name": "myVPC-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:route-table/rtb-0fcd99237744cc356",
            "id": "rtb-0fcd99237744cc356",
            "owner_id": "537064189997",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023cdf329f72ac05c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myVPC-public-route-table"
            },
            "tags_all": {
              "Name": "myVPC-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0078f4bedde108bb3",
            "route_table_id": "rtb-0ba379cbf65f1584a",
            "subnet_id": "subnet-08f2444495d340954"
          },
          "dependencies": [
            "module.subnet-module.aws_route_table.private",
            "module.subnet-module.aws_subnet.private_subnet",
            "module.subnet-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081624100a3452f95",
            "route_table_id": "rtb-0ba379cbf65f1584a",
            "subnet_id": "subnet-08d86b70d5ec5725e"
          },
          "dependencies": [
            "module.subnet-module.aws_route_table.private",
            "module.subnet-module.aws_subnet.private_subnet",
            "module.subnet-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009b48b45c5a923da",
            "route_table_id": "rtb-0ba379cbf65f1584a",
            "subnet_id": "subnet-09e0743f5263459c7"
          },
          "dependencies": [
            "module.subnet-module.aws_route_table.private",
            "module.subnet-module.aws_subnet.private_subnet",
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050d94b68c0ae2daa",
            "route_table_id": "rtb-0fcd99237744cc356",
            "subnet_id": "subnet-0f4327ea03f94077f"
          },
          "dependencies": [
            "module.subnet-module.aws_route_table.public",
            "module.subnet-module.aws_subnet.public_subnet",
            "module.subnet-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035bfdfda1179d554",
            "route_table_id": "rtb-0fcd99237744cc356",
            "subnet_id": "subnet-045499fcf9acc3c34"
          },
          "dependencies": [
            "module.subnet-module.aws_route_table.public",
            "module.subnet-module.aws_subnet.public_subnet",
            "module.subnet-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4a714c744050e0d",
            "route_table_id": "rtb-0fcd99237744cc356",
            "subnet_id": "subnet-0336781b652126412"
          },
          "dependencies": [
            "module.subnet-module.aws_route_table.public",
            "module.subnet-module.aws_subnet.public_subnet",
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:security-group/sg-0aecc2f38bdfc1ea5",
            "description": "Default SG to alllow traffic from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0aecc2f38bdfc1ea5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "myVPC-default-sg",
            "name_prefix": "",
            "owner_id": "537064189997",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myVPC-default-sg"
            },
            "tags_all": {
              "Name": "myVPC-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:subnet/subnet-08f2444495d340954",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f2444495d340954",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1a-private-subnet"
            },
            "tags_all": {
              "Name": "us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:subnet/subnet-08d86b70d5ec5725e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d86b70d5ec5725e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1b-private-subnet"
            },
            "tags_all": {
              "Name": "us-east-1b-private-subnet"
            },
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:subnet/subnet-09e0743f5263459c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e0743f5263459c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1c-private-subnet"
            },
            "tags_all": {
              "Name": "us-east-1c-private-subnet"
            },
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:subnet/subnet-0f4327ea03f94077f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4327ea03f94077f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1a-public-subnet"
            },
            "tags_all": {
              "Name": "us-east-1a-public-subnet"
            },
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:subnet/subnet-045499fcf9acc3c34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045499fcf9acc3c34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1b-public-subnet"
            },
            "tags_all": {
              "Name": "us-east-1b-public-subnet"
            },
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:subnet/subnet-0336781b652126412",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0336781b652126412",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537064189997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1c-public-subnet"
            },
            "tags_all": {
              "Name": "us-east-1c-public-subnet"
            },
            "vpc_id": "vpc-0075d66451b728b25"
          },
          "dependencies": [
            "module.subnet-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.subnet-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537064189997:vpc/vpc-0075d66451b728b25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b70d56762170809",
            "default_route_table_id": "rtb-0ead59ac7b7d615d5",
            "default_security_group_id": "sg-0d1264d72039aa0df",
            "dhcp_options_id": "dopt-0d07ee499b50d96a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0075d66451b728b25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ead59ac7b7d615d5",
            "owner_id": "537064189997",
            "tags": {
              "Name": "myVPC"
            },
            "tags_all": {
              "Name": "myVPC"
            }
          }
        }
      ]
    }
  ]
}